Create the no-sneak-net module